// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TotalsStrip snapshots > renders example 1 1`] = `
<div
  class="kv"
>
  <div>
    Subtotal / Jumlah Kecil
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      100.00
    </span>
  </div>
  <div>
    Discount / Diskaun
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      - 0.00
    </span>
  </div>
  <div>
    Delivery / Penghantaran
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      10.00
    </span>
  </div>
  <div>
    Return Delivery / Pengambilan Balik
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      0.00
    </span>
  </div>
  <div>
    Penalty / Denda
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      0.00
    </span>
  </div>
  <div>
    Total / Jumlah
  </div>
  <div
    style="font-weight: 600; text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      110.00
    </span>
  </div>
  <div>
    Paid / Dibayar
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      50.00
    </span>
  </div>
  <div>
    To Collect / Baki Perlu Dibayar
  </div>
  <div
    style="font-weight: 600; text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      60.00
    </span>
  </div>
</div>
`;

exports[`TotalsStrip snapshots > renders example 2 1`] = `
<div
  class="kv"
>
  <div>
    Subtotal / Jumlah Kecil
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      200.00
    </span>
  </div>
  <div>
    Discount / Diskaun
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      - 20.00
    </span>
  </div>
  <div>
    Delivery / Penghantaran
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      0.00
    </span>
  </div>
  <div>
    Return Delivery / Pengambilan Balik
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      0.00
    </span>
  </div>
  <div>
    Penalty / Denda
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      5.00
    </span>
  </div>
  <div>
    Total / Jumlah
  </div>
  <div
    style="font-weight: 600; text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      185.00
    </span>
  </div>
  <div>
    Paid / Dibayar
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      100.00
    </span>
  </div>
  <div>
    To Collect / Baki Perlu Dibayar
  </div>
  <div
    style="font-weight: 600; text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      85.00
    </span>
  </div>
</div>
`;

exports[`TotalsStrip snapshots > renders example 3 1`] = `
<div
  class="kv"
>
  <div>
    Subtotal / Jumlah Kecil
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      50.00
    </span>
  </div>
  <div>
    Discount / Diskaun
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      - 5.00
    </span>
  </div>
  <div>
    Delivery / Penghantaran
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      5.00
    </span>
  </div>
  <div>
    Return Delivery / Pengambilan Balik
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      5.00
    </span>
  </div>
  <div>
    Penalty / Denda
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      10.00
    </span>
  </div>
  <div>
    Total / Jumlah
  </div>
  <div
    style="font-weight: 600; text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      65.00
    </span>
  </div>
  <div>
    Paid / Dibayar
  </div>
  <div
    style="text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      65.00
    </span>
  </div>
  <div>
    To Collect / Baki Perlu Dibayar
  </div>
  <div
    style="font-weight: 600; text-align: right;"
  >
    <span>
      <span>
        RM
      </span>
       
      0.00
    </span>
  </div>
</div>
`;
